fix content overflow over frame problem

--- a/xbeamerchart/stylesheet/plugin.less
+++ b/xbeamerchart/stylesheet/plugin.less
@@ -3,11 +3,10 @@
         margin: 0;
     }
     
-    & > .XBeamer-plugin-content{
+    .content{
         width: inherit;
         height: inherit;
         background: white;
-        overflow-y: auto; 
     }
     
     .activityStreamPlugin{
