--- a/xbeamerchart/stylesheet/widget.less
+++ b/xbeamerchart/stylesheet/widget.less
@@ -32,8 +32,10 @@
         }
     }
     
-    & > .content{
+    & > .content-wrapper{
         padding: 20px;
+        height: 86.6%;
+        overflow-y: auto;
     }
     
     .XBeamer-submit{
